resultMap实现一对多

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8080
 #spring\u96C6\u6210Mybatis\u73AF\u5883
 mybatis.type-aliases-package=com.wnf.entity
 #\u52A0\u8F7DMybatis\u914D\u7F6E\u6587\u4EF6
-#mybatis.mapper-locations = classpath:mapper/*Dao.xml
+mybatis.mapper-locations = classpath:mapper/*Dao.xml
 mybatis.config-location = classpath:mapper/config/sqlMapConfig.xml
 
 spring.datasource.driver-class-name= com.mysql.jdbc.Driver
